Changes from papeeria

--- a/cv.tex
+++ b/cv.tex
@@ -71,7 +71,7 @@ Key responsibilities:
 \end{itemize}}
 
 \section{Skills}
-\cvitem{General}{Java, Groovy, SQL, Bash, Unix, Spring, MapReduce, Git, Gradle}
+\cvitem{General}{Java, Groovy, Multithreaded programming, SQL, Bash, Unix, Spring, MapReduce, Git, Gradle}
 \cvitem{Minor}{Python, R, Statistics, CSS, Html, Javascript, Angular.js}
 
 \newpage
