Added general info

--- a/cv.tex
+++ b/cv.tex
@@ -20,7 +20,7 @@
 
 % adjust the page margins
 \usepackage[scale=0.75]{geometry}
-\usepackage{hyperref}
+% \usepackage{hyperref}
 %\setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
 %\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 
@@ -46,8 +46,11 @@
 % \cvitem{supervisors}{Supervisors}
 % \cvitem{description}{Short thesis abstract}
 
-\section{Areas of expertise}
-\cvitem{}{Application monitoring, search quality, A/B testing, evaluation metrics}
+\section{General}
+\cvitem{}{My primary programming language is Java in which I have a good expertise.
+One of my main concerns is writing clean and maintainable code as well as covering
+it with tests. I am a strong supporter of such best practices as code reviews, git flow
+and others.}
 
 \section{Experience}
 
@@ -70,11 +73,11 @@ Key responsibilities:
 \item Supporting various MapReduce scripts written in C++, Bash, Python.
 \end{itemize}}
 
-\section{Skills}
-\cvitem{General}{Java, Groovy, Multithreaded programming, SQL, Bash, Unix, Spring, MapReduce, Git, Gradle}
-\cvitem{Minor}{Python, R, Statistics, CSS, Html, Javascript, Angular.js}
-
 \newpage
+\section{Skills}
+\cvitem{General}{Java, Groovy, Multithreaded programming, SQL, Bash, Unix, Spring, MapReduce, Git, Mercurial, Gradle}
+\cvitem{Minor}{Python, R, statistics, A/B testing, basic ML, CSS, Html, Javascript, Angular.js}
+
 \section{Non-work projects}
 \cvitem{}{
 \begin{itemize}
