Removed some stuff

--- a/cv.tex
+++ b/cv.tex
@@ -75,7 +75,7 @@ Key responsibilities:
 
 \newpage
 \section{Skills}
-\cvitem{General}{Java, Groovy, Multithreaded programming, SQL, Bash, Unix, Spring, MapReduce, Git, Mercurial, Gradle}
+\cvitem{General}{Java, Groovy, Multithreaded programming, SQL, Bash, Spring, MapReduce, Git, Mercurial, Gradle}
 \cvitem{Minor}{Python, R, statistics, A/B testing, basic ML, CSS, Html, Javascript, Angular.js}
 
 \section{Non-work projects}
