Changes from papeeria

--- a/cv.tex
+++ b/cv.tex
@@ -29,7 +29,7 @@
 \address{}{Tartu}{Estonia}
 \phone[mobile]{+372~5361~5889}
 \email{nikita.artyushov@gmail.com}
-\social[linkedin][https://www.linkedin.com/in/artyushov]{Nikita Artyushov}
+\social[linkedin][www.linkedin.com/in/artyushov]{Nikita Artyushov}
 \social[github]{artyushov}
 \homepage{artyushov.me}
 
