--- a/cv.tex
+++ b/cv.tex
@@ -68,6 +68,7 @@ I was a part of the team developing online evaluation tools.\newline
 Key responsibilities:
 \begin{itemize}
 \item Developing and supporting a distributed platform for metrics computations
+\item Improving and expanding a zoo of HTML parsers
 \item Implementing new evaluation metrics
 \item Designing and developing a service from scratch for search KPIs computation
 \item Supporting various MapReduce scripts written in C++, Bash, Python.
@@ -76,7 +77,7 @@ Key responsibilities:
 \newpage
 \section{Skills}
 \cvitem{General}{Java, Groovy, Multithreaded programming, SQL, Bash, Spring, MapReduce, Git, Mercurial, Gradle}
-\cvitem{Minor}{Python, R, statistics, A/B testing, basic ML, CSS, Html, Javascript, Angular.js}
+\cvitem{Minor}{Python, R, Basic ML, Statistics, Scala, A/B testing, CSS, HTML, Javascript, Angular.js}
 
 \section{Non-work projects}
 \cvitem{}{
