--- a/cv.tex
+++ b/cv.tex
@@ -38,7 +38,7 @@
 \section{Experience}
 
 \cventry{Jan~2015--present}{Software Engineer}{\href{http://plumbr.eu}{Plumbr}}{Tartu}{Estonia}{
-\textbf{java, groovy, amazon-web-services, spring-boot, docker, gradle, apache-kafka}
+\textbf{java, groovy, amazon-web-services, spring-boot, docker, gradle, apache-kafka, microservices}
 \vspace{1mm}
 \newline{}
 I played one of the core roles in two major projects at Plumbr.
